--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <div id=”memory_board”>
   <canvas id=”gameCanvas”></canvas>
 </div>
+
 #gameArea {
   position: absolute;
   left:     50%;
@@ -13,16 +14,17 @@
 #gameCanvas {
   width: 100%;
   height: 100%;
-}
-div#memory_board > div{
+  }
+  
+  #memory_board > div{
 	background: url(tile_bg.jpg) no-repeat;
 	border:#000 1px solid;
-	width:71px;
-	height:71px;
+	width:20px;
+	height:20px;
 	float:left;
 	margin:10px;
 	padding:20px;
-	font-size:64px;
+	font-size:18px;
 	cursor:pointer;
 	text-align:center;
 }
@@ -30,7 +32,7 @@ div#memory_board > div{
 <script>
 // Scripted By Adam khoury in connection with the following video tutorial:
 // http://www.youtube.com/watch?v=c_ohDPWmsM0
-var memory_array = ['A','A','B','B','C','C','D','D','E','E','F','F','G','G','H','H','I','I','J','J','K','K','L','L'];
+var memory_array = ['A','A','B','B','C','C','D','D','E','E','F','F'];
 var memory_values = [];
 var memory_tile_ids = [];
 var tiles_flipped = 0;
